<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.foodDetail.FoodDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/picture_background"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:src="@mipmap/img"
            android:scaleType="centerCrop"
            android:layout_gravity="top"
            android:background="@drawable/shadow"
            android:contentDescription="@string/picture" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_gravity="top"
            android:background="@drawable/shadow"
            android:contentDescription="@string/picture" />

        <ImageButton
            android:id="@+id/btn_detail_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:layout_gravity="top|start"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/picture" />

        <ToggleButton
            android:id="@+id/btn_detail_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            android:background="@drawable/toggle_button"
            android:layout_gravity="top|end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/picture" />

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            android:background="@drawable/layout_bg">

            <TextView
                android:id="@+id/foodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                tools:text="Nasi Padang"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Sumatra Barat"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/sample"
                android:lineSpacingExtra="5dp"
                android:padding="16dp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btn_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/view_on_google_maps"
                android:background="@drawable/button_bg"/>
        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            tools:src="@mipmap/img"
            android:scaleType="centerCrop"
            app:civ_border_width="8dp"
            app:civ_border_color="?android:attr/colorBackground"
            android:layout_gravity="top|center"
            android:layout_marginTop="100dp"
            android:elevation="10dp"/>

    </FrameLayout>
</ScrollView>